--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-Django==1.6.5
-dj-database-url==0.3.0
-dj-static==0.0.6
-django-toolbelt==0.0.1
-gunicorn==19.0.0
-psycopg2==2.5.3
-static3==0.5.1
+Flask==0.10.1
+Flask-Sockets==0.1
+Jinja2==2.7.1
+MarkupSafe==0.18
+Werkzeug==0.9.4
+distribute==0.6.34
+gevent==0.13.8
+gevent-websocket==0.3.6
+greenlet==0.4.1
+gunicorn==18.0
+itsdangerous==0.23
+redis==2.8.0
 wsgiref==0.1.2
